# api/gen/http/openapi.yaml
@@ -158,11 +158,7 @@ paths:
       tags:
       - rating
       summary: Get rating
-      description: |-
-        Find user's rating for a resource
-
-        **Required security scopes for jwt**:
-          * `rating:read`
+      description: Find user's rating for a resource
       operationId: rating#Get
       parameters:
       - name: id
@@ -170,11 +166,6 @@ paths:
         description: ID of a resource
         required: true
         type: integer
-      - name: Authorization
-        in: header
-        description: JWT
-        required: true
-        type: string
       responses:
         "200":
           description: OK response.
@@ -200,17 +191,11 @@ paths:
             $ref: '#/definitions/RatingGetInternalErrorResponseBody'
       schemes:
       - https
-      security:
-      - jwt_header_Authorization: []
     put:
       tags:
       - rating
       summary: Update rating
-      description: |-
-        Update user's rating for a resource
-
-        **Required security scopes for jwt**:
-          * `rating:write`
+      description: Update user's rating for a resource
       operationId: rating#Update
       parameters:
       - name: id
@@ -218,11 +203,6 @@ paths:
         description: ID of a resource
         required: true
         type: integer
-      - name: Authorization
-        in: header
-        description: JWT
-        required: true
-        type: string
       - name: UpdateRequestBody
         in: body
         required: true
@@ -251,8 +231,6 @@ paths:
             $ref: '#/definitions/RatingUpdateInternalErrorResponseBody'
       schemes:
       - https
-      security:
-      - jwt_header_Authorization: []
   /schema/swagger.json:
     get:
       tags:
